syntax = "proto3";

package proto;

option go_package = "./;proto";

import "enum.server.proto";

message GateTcpMqHandshakeReq {
  ServerType type = 1; // 服务类型
  uint32 app_id = 2; // app_id
}

message GateTcpMqHandshakeRsp {
  Retcode ret_code = 1; // 状态
  ServerType type = 2; // 服务类型
  uint32 app_id = 3; // app_id
}

message PlayerLogoutReq {
  uint32 uid = 1; // uid
  uint32 gate_app_id = 2; // 源gate
  LOGOUTSTATUS status = 3; //离线原因
}

message PlayerLogoutRsp {
  uint32 uid = 1; // uid
  uint32 gate_app_id = 2; // 源gate
  LOGOUTSTATUS status = 3; //离线原因
}

message PlayerLogoutNotify{ // 玩家下线通知
  uint32 uid= 1;
  LOGOUTSTATUS status = 2; //离线原因
}